--- a/src/assets/styles/cmps/_DynamicTaskEdit.scss
+++ b/src/assets/styles/cmps/_DynamicTaskEdit.scss
@@ -34,14 +34,27 @@
         }
 
         .close-modal {
-            grid-column: 3/4;
+            grid-column: 3;
             display: flex;
             align-self: center;
+            align-items: center;
+            justify-content: center;
             border: none;
             background-color: white;
             cursor: pointer;
             padding: 6px;
             margin: 0;
+            width: 32px;
+            height: 32px;
+            border-radius: 8px;
+
+            &:hover {
+                background-color: rgba(9, 30, 66, .141);
+            }
+
+            &:active {
+                background-color: #091E424F;
+            }
 
             svg {
                 width: 16px;
